syntax = "proto2";

package grr;

message SignedCommand {
  enum OS {
    UNSET = 0;
    LINUX = 1;
    MACOS = 2;
    WINDOWS = 3;
  }
  // An arbitrary, but unique per OS, identifier of the signed command.
  optional string id = 1;
  // Operating system the command is running on.
  optional OS operating_system = 2;
  reserved 3;
  // Serialized `rrg.action.execute_signed_command.SignedCommand` message.
  optional bytes command = 5;
  optional bytes ed25519_signature = 4;

  // Path to the file the command was defined in.
  optional string source_path = 6;
}
